@@ -1,3 +1,7 @@
+2005-03-09 09:52  antirez
+
+	* ChangeLog, bench.tcl: New test added to the benchmark
+
 2005-03-09 08:19  antirez
 
 	* ChangeLog, TODO, bench.tcl, jim.c: An initial [format] command.
